Handle invitations through Hibernate instead of external TeamsAPIService. Before deployment, run the sql update script.
git-svn-id: https://svn.surfnet.nl/svn/coin-gui/coin-teams/trunk@1125 3364c4cd-9065-40b6-aee7-261f90ce6533