@@ -10,11 +10,11 @@ import javax.mail.internet.AddressException;
 import javax.mail.internet.InternetAddress;
 import javax.servlet.http.HttpServletRequest;
 
-import org.apache.http.client.ClientProtocolException;
 import org.opensocial.RequestException;
 import org.opensocial.models.Person;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.MessageSource;
+import org.springframework.mail.SimpleMailMessage;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.ModelMap;
 import org.springframework.util.StringUtils;
@@ -23,12 +23,15 @@ import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.servlet.LocaleResolver;
 import org.springframework.web.servlet.view.RedirectView;
 
+import nl.surfnet.coin.shared.service.MailService;
+import nl.surfnet.coin.teams.domain.Invitation;
 import nl.surfnet.coin.teams.domain.Member;
 import nl.surfnet.coin.teams.domain.Team;
 import nl.surfnet.coin.teams.interceptor.LoginInterceptor;
 import nl.surfnet.coin.teams.service.ShindigActivityService;
+import nl.surfnet.coin.teams.service.TeamInviteService;
 import nl.surfnet.coin.teams.service.TeamService;
-import nl.surfnet.coin.teams.service.TeamsAPIService;
+import nl.surfnet.coin.teams.util.TeamEnvironment;
 import nl.surfnet.coin.teams.util.ViewUtil;
 
 /**
@@ -50,11 +53,14 @@ public class AddMemberController {
 
   private static final String ACTIVITY_NEW_MEMBER_TITLE = "activity.NewMemberTitle";
 
+  private static final String UTF_8 = "utf-8";
+  private static final String TEAM_PARAM = "team";
+
   @Autowired
   private TeamService teamService;
 
   @Autowired
-  private TeamsAPIService teamsAPIService;
+  private TeamInviteService teamInviteService;
 
   @Autowired
   private ShindigActivityService shindigActivityService;
@@ -65,10 +71,16 @@ public class AddMemberController {
   @Autowired
   private LocaleResolver localeResolver;
 
+  @Autowired
+  private MailService mailService;
+  
+  @Autowired
+  private TeamEnvironment environment;
+
   @RequestMapping("/addmember.shtml")
   public String start(ModelMap modelMap, HttpServletRequest request) {
 
-    String teamId = request.getParameter("team");
+    String teamId = request.getParameter(TEAM_PARAM);
     Team team = null;
 
     if (StringUtils.hasText(teamId)) {
@@ -76,7 +88,7 @@ public class AddMemberController {
     }
 
     if (team != null) {
-      modelMap.addAttribute("team", team);
+      modelMap.addAttribute(TEAM_PARAM, team);
     } else {
       // Team does not exist
       throw new RuntimeException("Parameter error.");
@@ -87,11 +99,12 @@ public class AddMemberController {
     return "addmember";
   }
 
+  
   @RequestMapping(value = "/doaddmember.shtml", method = RequestMethod.POST)
-  public RedirectView addTeam(ModelMap modelMap, HttpServletRequest request)
+  public RedirectView addMembersToTeam(ModelMap modelMap, HttpServletRequest request)
       throws RequestException, IOException {
 
-    String teamId = URLDecoder.decode(request.getParameter("team"), "utf-8");
+    String teamId = URLDecoder.decode(request.getParameter(TEAM_PARAM), UTF_8);
     String emailString = request.getParameter("memberEmail");
     String message = request.getParameter("message");
     Person person = (Person) request.getSession().getAttribute(
@@ -100,19 +113,15 @@ public class AddMemberController {
 
     if (!StringUtils.hasText(teamId) || !StringUtils.hasText(emailString)
         || !StringUtils.hasText(message)) {
-      throw new RuntimeException("Parameter error.");
+      throw new IllegalArgumentException("Missing required parameters team, memberEmail or message");
     }
 
-    Team team = null;
-
-    if (StringUtils.hasText(teamId)) {
-      team = teamService.findTeamById(teamId);
-    }
+    Team team = teamService.findTeamById(teamId);
 
     if (team == null) {
-      throw new RuntimeException("Parameter error.");
+      throw new IllegalArgumentException("Received incorrect team value");
     }
-    modelMap.addAttribute("team", team);
+    modelMap.addAttribute(TEAM_PARAM, team);
 
     // Parse the email addresses to see whether they are valid
     InternetAddress[] emails;
@@ -120,45 +129,74 @@ public class AddMemberController {
       emails = InternetAddress.parse(emailString);
     } catch (AddressException e) {
       return new RedirectView("addmember.shtml?team="
-          + URLEncoder.encode(teamId, "utf-8")
-          + "&mes=error.wrongFormattedEmailList" + "&view="
+          + URLEncoder.encode(teamId, UTF_8)
+          + "&mes=error.wrongFormattedEmailList&view="
           + ViewUtil.getView(request));
     }
 
-    // Send the invitation
-    sendInvitations(team, teamService.findMember(team, personId), emailString,
-        message, localeResolver.resolveLocale(request));
+    Locale locale = localeResolver.resolveLocale(request);
+    doInviteMembers(emails, team, message, personId, locale);
 
-    // Add an activity for every member that has been invited to the team.
-    for (InternetAddress email : emails) {
-      addActivity(team.getId(), team.getName(), email.getAddress(), personId,
-          localeResolver.resolveLocale(request));
-
-    }
 
     return new RedirectView("detailteam.shtml?team="
-        + URLEncoder.encode(team.getId(), "utf-8") + "&view="
+        + URLEncoder.encode(team.getId(), UTF_8) + "&view="
         + ViewUtil.getView(request));
   }
 
-  private void sendInvitations(Team team, Member member, String emails,
-      String message, Locale locale) throws IllegalStateException,
-      ClientProtocolException, IOException {
+  private void doInviteMembers(InternetAddress[] emails, Team team,
+                               String message, String inviterPersonId,
+                               Locale locale)
+          throws RequestException, IOException {
+    // Send the invitation
+    Member inviter = teamService.findMember(team, inviterPersonId);
+    message = formatMessage(message, inviter, team);
+    Object[] messageValuesSubject = { team.getName() };
+    String subject = messageSource.getMessage(INVITE_SEND_INVITE_SUBJECT,
+        messageValuesSubject, locale);
+
+    // Add an activity for every member that has been invited to the team.
+    for (InternetAddress email : emails) {
+      if (teamInviteService.alreadyInvited(email.getAddress(), team)) {
+        continue;
+      }
+      Invitation invitation = new Invitation(email.getAddress(), team.getId(),
+              inviter.getId());
+      teamInviteService.saveOrUpdate(invitation);
+      sendInvitationByMail(message, locale, subject, invitation);
+      addActivity(team.getId(), team.getName(), email.getAddress(), inviterPersonId,
+              locale);
+    }
+  }
+
+  private String formatMessage(String message, Member member, Team team) {
     // First replace the {inviter name} and {team name} with {0} and {1}
     // respectively
+    // Footer is added later (is specific per invitee)
     message = StringUtils.replace(message, INVITER_NAME, "{0}");
     message = StringUtils.replace(message, TEAM_NAME, "{1}");
     MessageFormat formatter = new MessageFormat(message);
 
-    Object[] messageValuesSubject = { team.getName() };
     Object[] messageValuesMessage = { member.getName(), team.getName() };
 
     message = formatter.format(messageValuesMessage);
-    String subject = messageSource.getMessage(INVITE_SEND_INVITE_SUBJECT,
-        messageValuesSubject, locale);
-
-    teamsAPIService.sendInvitations(emails, team.getId(), message, subject);
+    return message;
   }
+
+  private void sendInvitationByMail(String message, Locale locale,
+                                    String subject, Invitation invitation) {
+    Object[] messageValuesFooter = {environment.getTeamsURL(),
+            invitation.getInvitationHash()};
+    String footer = messageSource.getMessage(
+            "invite.MessageFooter", messageValuesFooter, locale);
+
+    SimpleMailMessage mailMessage = new SimpleMailMessage();
+    mailMessage.setFrom(environment.getSystemEmail());
+    mailMessage.setTo(invitation.getEmail());
+    mailMessage.setSubject(subject);
+    mailMessage.setText(message + footer);
+    mailService.sendAsync(mailMessage);
+  }
+
 
   private void addActivity(String teamId, String teamName, String email,
       String personId, Locale locale) throws RequestException, IOException {
